# dumbo_robot

./: LICENSE  README.md  stack.xml
dumbo_bringup/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
dumbo_bringup/components/: ar_kinect.launch  biotac.launch  gravity_compensation.launch  imu.launch  kinect.launch  left_arm_FT_sensor.launch  left_arm_ft_sensor.launch  left_lwa.launch  optoforce.launch  primesense.launch  restart_pci_CAN_cards.sh  right_arm_FT_sensor.launch  right_arm_FT_sensor_robotiq.launch  right_arm_ft_sensor.launch  right_arm_ft_sensor_robotiq.launch  right_lwa.launch  right_lwa_sdh.launch  robotiq.launch  safety_monitor.launch  sdh.launch  start_pci_CAN_cards.sh  stop_pci_CAN_cards.sh
dumbo_bringup/config/: dumbo_visualization.rviz
dumbo_bringup/launch/: dumbo_bringup.launch  dumbo_model_gui.launch  dumbo_robotiq_bringup.launch  dumbo_sdh_bringup.launch
dumbo_bringup/robots/dumbo/: dumbo_2grippers_bringup.launch  dumbo_2grippers_sim_bringup.launch  dumbo_bringup.launch  dumbo_robotiq_bringup.launch  dumbo_sdh_bringup.launch  dumbo_sdh_model_gui.launch  dumbo_visualization.launch
dumbo_calibration_config/: CMakeLists.txt  package.xml
dumbo_calibration_config/config/: depth_PS1080_PrimeSense.yaml  dumbo_left_arm_ft_calib_data.yaml  dumbo_right_arm_ft_calib_data.yaml  rgb_PS1080_PrimeSense.yaml
dumbo_calibration_config/launch/: primesense_extrinsic_calibration.launch
dumbo_controller_config/: CMakeLists.txt  package.xml
dumbo_controller_config/config/: dumbo_force_torque_sensor_controller.yaml  dumbo_joint_state_controller.yaml  dumbo_joint_trajectory_controllers.yaml  dumbo_joint_velocity_controllers.yaml
dumbo_controller_config/launch/: dumbo_default_controllers.launch
dumbo_hardware_config/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
dumbo_hardware_config/common/: upload_dumbo.launch  upload_dumbo_2grippers.launch  upload_dumbo_robotiq.launch  upload_dumbo_sdh.launch  upload_dumbo_vkc.launch
dumbo_hardware_config/config/: left_arm.yaml  left_arm_ft_sensor.yaml  pg70.yaml  right_arm.yaml  right_arm_ft_sensor.yaml  sdh.yaml
dumbo_hardware_config/dumbo/config/: left_arm_FT_sensor.yaml  left_arm_ft_sensor.yaml  left_lwa.yaml  lwa.yaml  pg70.yaml  right_arm.yaml  right_arm_FT_sensor.yaml  right_arm_FT_sensor_robotiq.yaml  right_arm_ft_sensor.yaml  right_lwa.yaml  right_lwa_sdh.yaml
dumbo_hardware_config/dumbo/urdf/: dumbo.urdf  dumbo.urdf.xacro  dumbo_2grippers.urdf  dumbo_2grippers.urdf.xacro  dumbo_camera.urdf.xacro  dumbo_robotiq.urdf  dumbo_robotiq.urdf.xacro  dumbo_sdh.urdf  dumbo_sdh.urdf.xacro  dumbo_vkc.urdf.xacro  dumbo_vkc_new.urdf.xacro
dumbo_hardware_config/launch/: dumbo_hardware_config.launch
dumbo_robot/: CMakeLists.txt  package.xml
dumbo_sim_bringup/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
dumbo_sim_bringup/components/: dumbo_velocity_integrator.launch  vel_integrator.launch
dumbo_sim_bringup/config/: dumbo_velocity_integrator.yaml  vel_integrator.yaml
dumbo_sim_bringup/include/dumbo_sim_bringup/: dumbo_velocity_integrator.h
dumbo_sim_bringup/robots/dumbo/: dumbo_robotiq_sim_bringup.launch  dumbo_sdh_sim_bringup.launch  dumbo_sim_bringup.launch  dumbo_sim_visualization.launch
dumbo_sim_bringup/src/: dumbo_powercube_chain_sim.cpp  dumbo_velocity_integrator.cpp
