<package>
 <name> dumbo_sim_bringup </name>
  <version>1.0.0</version>
  <description>
    Launch files for bringing up a simulated Dumbo robot. Can simulate the kinematics of the robot.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/dumbo_sim_bringup</url>
  <author>Francisco Vina</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cob_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>dumbo_arm_navigation</run_depend>
  <run_depend>cob_trajectory_controller</run_depend>
  <run_depend>dumbo_vel_integrator</run_depend>
  
</package>